fix: resolve SonarCloud issues and improve test coverage - Add Activatable interface to replace dynamic JPQL in BaseRepositoryImpl   (use entityManager.merge() instead of save/saveAll to avoid S6809) - Fix @Transactional proxy bypass in OperationOrchestratorService - Add Pageable parameter to BaseRepository.filter() + FilterRequest.toPageable() - Fix deprecated UNPROCESSABLE_ENTITY → UNPROCESSABLE_CONTENT (RFC 9110) - Add conditional logging guard in GlobalExceptionHandler (S2629) - Remove unused field in MatrixViewerController - Remove throws Exception from SecurityConfig.filterChain (Spring Security 7) - Fix OperationEvent constructor count (S107) via @Builder + @AllArgsConstructor - Add transient modifier to GenericSpecification.filterRequest (serialization) - Add Serializable + serialVersionUID to Person entity - Mark User.id as @Nullable; implement Activatable on User and other entities - Add sonar.coverage.exclusions for entities, DTOs, configs - Add clean to CI Maven command to prevent stale jacoco.xml - Add tests: DateUtilsTest, GlobalExceptionHandlerTest, GenericSpecificationTest - Fix Mockito overload-resolution issue in GenericSpecificationTest   (use anyString() to force equal(Expression<?>, Object) overload stub)